--- a/src/main/resources/templates/layouts/dashboard_layout.html
+++ b/src/main/resources/templates/layouts/dashboard_layout.html
@@ -18,7 +18,9 @@
 <link  rel="stylesheet" type="text/css"
 	href="/css/bootstrap.min.css">
 <link  rel="stylesheet" type="text/css"
-	href="/css/notification.css">
+	href="/css/bootstrap.min.css">
+<link  rel="stylesheet" type="text/css"
+	href="/css/product-details.css">
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -35,6 +37,7 @@
 <script th:src="@{/js/tab.js}"></script>
 <script th:src="@{/js/number-spinner.js}"></script>
 <script th:src="@{/js/notification.js}"></script>
+<script th:src="@{/js/product-details.js}"></script>
 
 <script src="https://res.cloudinary.com/dxfq3iotg/raw/upload/v1557232134/toasty.js"></script>
 </body>
