--- a/src/main/resources/templates/paymentMethod.html
+++ b/src/main/resources/templates/paymentMethod.html
@@ -45,7 +45,7 @@
 
 
                 <div style="clear: both; display: block; height: 10px;"></div>
-                <input type="submit" class="btn btn-info col-2 form-control" value="Save">
+                <input type="submit" class="btn btn-primary form-control" value="Save">
             </form>
 
         </div>
